    patching the game a posteriori is cumbersome if the equivalence
    concerns different players).

  - genaut learned two new familes of automata, --cycle-log-nba and
    --cycle-onehot-nba.  They both create a cycle of n^2 states that
    can be reduced to a cycle of n states using reduction based on
    direct simulation.

  Library:

  - The member function as_automaton of the aiger class now
    supports terminating semantics and was internally improved.

  - The following new trivial simplifications have been implemented for SEREs:
    - f|[+] = [+] if f rejects [*0]
    - f|[*] = [*] if f accepts [*0]
    - f&&[+] = f if f rejects [*0]
    - b:b[*i..j] = b[*max(i,1)..j]
    - b[*i..j]:b[*k..l] = b[*max(i,1)+max(k,1)-1, j+l-1]

  - The HOA parser is a bit smarter when merging multiple initial
    states into a single initial state (Spot's automaton class
    supports only one): it now reuses the edges leaving initial states
    without incoming transitions.

  - The automaton parser has a new option "drop_false_edges" to
    specify whether edges labeled by "false" should be ignored during
    parsing.  It is enabled by default for backward compatibility.

  - spot::bdd_to_cnf_formula() is a new variant of spot::bdd_to_formula()
    that converts a BDD into a CNF instead of a DNF.

  - spot::relabel_bse() has been improved to better deal with more
    cases.  For instance '(a & b & c) U (!c & d & e)' is now
    correctly reduced as '(p0 & p1) U (!p1 & p2)', and
    '((a & !b) | (a->b)) U c' now becomes '1 U c'. (Issue #540.)

  - spot::relabel_overlapping_bse() is a new function that will
    replace boolean subformulas by fresh atomic propositions even if
    those subformulas share atomic propositions.

  - spot::translate() has a new -x option "relabel-overlap=M" that
    augments the existing "relabel-bool=N".  By default, N=4, M=8.
    When the formula to translate has more than N atomic propositions,